# Backup-Sync-Mini

./: .env  .env.example  .gitignore  README.md  docker-compose.yml  package.json  tsconfig.base.json  turbo.json
apps/agent/: Cargo.toml
apps/agent/src/: main.rs
apps/agent/src/api/: auth.rs  backups.rs  filesystem.rs  health.rs  mod.rs  routes.rs
apps/agent/src/core/: engine.rs  mod.rs  scanner.rs
apps/agent/src/crypto/: aes.rs  compress.rs  mod.rs
apps/agent/src/storage/: db.rs
apps/api/: package.json  tsconfig.json
apps/api/prisma/: schema.prisma
apps/api/src/: app.module.ts  main.ts
apps/api/src/modules/agents/: agents.controller.ts  agents.module.ts  agents.service.ts
apps/api/src/modules/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
apps/api/src/modules/backup-plans/: backup-plans.controller.ts  backup-plans.module.ts  backup-plans.service.ts
apps/api/src/modules/dashboard/: dashboard.controller.ts  (+1 more)
apps/api/src/prisma/: prisma.service.ts
apps/web/: next.config.mjs  open-next.config.ts  package.json  tailwind.config.ts  tsconfig.json  wrangler.jsonc
apps/web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/src/components/: require-auth.tsx
apps/web/src/hooks/: use-agent-filesystem.ts  use-agents.ts  use-backup-plans.ts  use-dashboard-summary.ts  use-execution-history.ts  use-executions.ts
apps/web/src/lib/: api-client.ts
apps/web/src/stores/: auth-store.ts
docker/: agent.Dockerfile  api.Dockerfile  web.Dockerfile
docs/: architecture.md  cloudflare-tunnel.md
scripts/: setup.sh
(+38 files in other folders)
