[package]
name = "backuphub-agent"
version = "0.1.0"
edition = "2021"
description = "BackupHub Backup Agent - servicio local que ejecuta las copias de seguridad"
license = "MIT"

[[bin]]
name = "backuphub-agent"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.38", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
uuid = { version = "1.9", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
sha2 = "0.10"
notify = "6.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
dotenvy = "0.15"
jsonwebtoken = "9.3"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
strip = true
